--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
 
     <template id="top">
         <div>
-            <section id="topSection">
+            <section id="topSection" class="p-5">
                 <div class="row">
                     <div class="col-12 col-md-6">
                         <img src="img/logo.png" class="logo">
-                        <h4>tu Propia</h4>
+                        <h4>Tu Propia</h4>
                         <h2>franquicia</h2>
-                        <h1>Luxury</h1>
+                        <h1>Lúxury</h1>
 
                         <p>Registra tus datos para enviarte toda 
                            la información sobre nuestra franquicia
                            y nuestros datos de contacto.</p>
 
                     </div>
-                    <div class="col-6 col-md-6">
+                    <div class="col-12 col-md-6">
                         <form action="">
                             <div class="form-group">
                                 <input type="text" class="form" placeholder="Nombre:">
@@ -53,7 +53,7 @@
                             <div class="form-group">
                                 <input type="text" class="form" placeholder="Teléfonos:">
                             </div>
-                            <input type="submit" class="btn" value="Más información">
+                            <input type="submit" class="btn btn-gold-gradient" value="Más información">
                         </form>
                     </div>
                 </div>
