--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <section id="topSection" class="p-5">
                 <div class="row">
                     <div class="col-12 col-md-6">
+                        <div class="bg-black"></div>
+                        <video autoplay muted loop id="myVideo">
+                            <source src="video/bokeh.mp4" type="video/mp4">
+                        </video>
                         <img src="img/logo.png" class="logo">
                         <div class="text">
                             <h4>Tu Propia</h4>
@@ -99,12 +103,12 @@
 
     <template id="weWork">
         <div>
-           <section id="weWorkSection" class="p-5 position-relative">
+           <section id="weWorkSection" class="pr-5 pl-5 pb-5 position-relative">
                <div class="background bg-1"></div>
                <div class="background bg-2"></div>
                <div class="background bg-3"></div>
                <div class="background bg-4"></div>
-               <div class="position-relative">
+               <div class="position-relative mt-5">
                     <h2>Algunos de nuestros trabajos</h2>
                     <div class="row">
                         <div class="col-12 col-md-4" v-for="work in works">
@@ -145,11 +149,11 @@
                 <img src="img/aro.png" class="aro aro-2 d-none d-md-block" alt="">
                 <img src="img/aro.png" class="aro aro-3 d-none d-md-block" alt="">
 
-                <div class="row p-4 m-0" id="secondAbout">
-                    <div class="col-12 col-md-4">
+                <div class="row p-4" id="secondAbout">
+                    <div class="col-12 col-md-6">
                         <img src="img/about2.png" alt="">
                     </div>
-                    <div class="col-12 col-md-8">
+                    <div class="col-12 col-md-6">
                         <div class="text">
                             <h2>Conoce un poco de nosotros</h2>
                             <div>
