--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div>
             <section id="topSection" class="p-5">
                 <div class="bg-black"></div>
-                <div class="row">
+                <div class="row position-relative row-max">
                     <div class="col-12 col-md-6">
                         <video autoplay muted loop id="myVideo">
                             <source src="video/bokeh.mp4" type="video/mp4">
@@ -70,7 +70,7 @@
     <template id="service">
         <div>
            <section id="serviceSection" class="p-5">
-                <div class="row">
+                <div class="row row-max">
                     <div class="col-12 col-md-3" v-for="service in services">
                         <div class="target">
                             <img :src="'img/'+service.img" alt="luxury">
@@ -87,7 +87,7 @@
         <div>
             <section id="experienceSection" class="p-5">
                  <h2><span>6</span> Áreas de experiencia en el sector belleza</h2>
-                 <div class="row">
+                 <div class="row row-max">
                      <div class="col-12 col-md-4" v-for="experience in experiences">        
                         <div class="target">
                             <div>
@@ -110,7 +110,7 @@
                <div class="background bg-4"></div>
                <div class="position-relative mt-5">
                     <h2>Algunos de nuestros trabajos</h2>
-                    <div class="row">
+                    <div class="row row-max">
                         <div class="col-12 col-md-4" v-for="work in works">
                             <div>
                                 <div class="target">
@@ -127,7 +127,6 @@
     <template id="about">
         <div>
             <section id="aboutSection" class="position-relative">
-
                 <div class="content-light p-3">
                 </div>
                 
@@ -149,7 +148,7 @@
                 <img src="img/aro.png" class="aro aro-2 d-none d-md-block" alt="">
                 <img src="img/aro.png" class="aro aro-3 d-none d-md-block" alt="">
 
-                <div class="row p-4" id="secondAbout">
+                <div class="row row-max p-4" id="secondAbout">
                     <div class="col-12 col-md-6">
                         <img src="img/about2.png" alt="">
                     </div>
@@ -164,7 +163,6 @@
                     </div>
                 </div>
             </section>
-           
         </div>
     </template>
 
@@ -172,24 +170,24 @@
         <div>
             <section id="footerSection" class="position-relative">
                 <img src="img/mancha2.png" class="mancha" alt="">
-                <div class="row p-5 m-0">
-                    <div class="col-12 p-0 m-0">
+                <div class="row m-auto p-5">
+                    <div class="col-12 p-0">
                         <h2>Grandes números, para grandes negocios</h2>
                     </div>
                 </div>
-                <div class="row p-5 m-0 numbers">
-                    <div class="col-12 col-md-4 m-0 p-0" v-for="aboutNumber in aboutNumbers">
-                        <h3>{{aboutNumber.cant}}</h3>
+                <div class="row m-auto  p-5 numbers">
+                    <div class="col-12 col-md-4 p-0" v-for="aboutNumber in aboutNumbers">
+                        <h3 :id="aboutNumber.id">{{aboutNumber.cant}}</h3>
                         <h4>{{aboutNumber.description}}</h4>
                     </div>
                 </div>
                 <div id="end" class="p-5">
-                    <div class="row m-0">
+                    <div class="row m-auto row-max">
                         <div class="col-12 m-0 p-0">
                             <h2>¿Quieres saber más?</h2>
                         </div>
                     </div>
-                    <div class="row m-0 p-0">
+                    <div class="row m-auto row-max p-0">
                         <div class="col-12 col-md-3 p-0 m-0" v-for="socialmedia in socialmedias">
                             <div class="target">
                                 <img :src="'img/'+socialmedia.img" alt="luxury">
@@ -204,6 +202,7 @@
 
     <script src="js/vue.js"></script>
     <script src="js/axios.min.js"></script>
+    <script src="js/count.js"></script>
     <script>
 
         const Top = {
@@ -303,15 +302,18 @@
                 return {
                     aboutNumbers:[
                         {
-                            cant:10,
+                            id:'numberGestion',
+                            cant:0,
                             description: 'Años de gestión exitosa',
                         },
                         {
-                            cant:50,
+                            id:'numberService',
+                            cant:0,
                             description: '% de utilidad neta por  cada servicio',
                         },
                         {
-                            cant:06,
+                            id:'numberExperience',
+                            cant:0,
                             description: 'Areas de experiencia en el sector belleza',
 
                         },
@@ -354,5 +356,7 @@
    
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 </body>
 </html>
