--- a/index.html
+++ b/index.html
@@ -404,18 +404,22 @@
                         {
                             img: 'red1.png',
                             text: '0414-5175159',
+                            url: 'web.whatsapp.web/send?phone=58414517519'
                         },
                         {
                             img: 'red2.png',
                             text: '@luxurysalon.ve',
+                            url: '#',
                         },
                         {
                             img: 'red3.png',
                             text: '@luxurysalon.ve',
+                            url: '#',
                         },
                         {
                             img: 'red4.png',
                             text: '@luxurysalon.ve',
+                            url: '',
                         }
                     ]
                 }
